--- a/src/components/list/radio-button/radio-button.scss
+++ b/src/components/list/radio-button/radio-button.scss
@@ -11,3 +11,11 @@
         @include radio.ink-color(primary);
     }
 }
+
+.mdc-radio {
+    .mdc-radio__native-control:enabled:not(:checked)
+        + .mdc-radio__background
+        .mdc-radio__outer-circle {
+        border-color: var(--mdc-checkbox-unchecked-color);
+    }
+}
